fix: private key now wraps on mobile and fits on one line on desktop

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -98,7 +98,7 @@ p, div
 
 .form-wide
   // Slightly wider form to ensure withdrawal addresses and private keys don't wrap on the receive table
-  max-width: 525px
+  max-width: 550px
   margin: 0 auto
 
 .form-extra-wide
@@ -194,3 +194,6 @@ p, div
 .border-warning
   border: 1px solid $warning
   border-radius: 10px
+
+.text-break-word
+  word-wrap: break-word
